test: adds api tests for sign up
